# cmake_test

./: .gitignore  CMakeLists.txt  README.md
include/: test.h
src/: CMakeLists.txt  test.cpp
test/: CMakeLists.txt  hello_test.cpp
